--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav a {
 #featured-property p {
   width: 800px;
   text-align: center;
+  margin: 0 auto;
 }
 
 footer {
@@ -33,6 +34,6 @@ footer {
   width: 100%;
 }
 
-#details > div {
+#details div {
   float: left;
 }
